<resources>
    <string name="app_name">Calculator</string>

    <string name="activity_active_calculator">Active Calculator</string>
    <string name="activity_passive_calculator">Passive Calculator</string>

    <string name="menu_calculator_swap">Swap Calculator</string>

    <string name="btn_number_0">0</string>
    <string name="btn_number_1">1</string>
    <string name="btn_number_2">2</string>
    <string name="btn_number_3">3</string>
    <string name="btn_number_4">4</string>
    <string name="btn_number_5">5</string>
    <string name="btn_number_6">6</string>
    <string name="btn_number_7">7</string>
    <string name="btn_number_8">8</string>
    <string name="btn_number_9">9</string>

    <string name="btn_operator_plus">+</string>
    <string name="btn_operator_minus">-</string>
    <string name="btn_operator_multiply">×</string>
    <string name="btn_operator_divide">÷</string>

    <string name="btn_command_reset">c</string>
    <string name="btn_command_evaluate">=</string>

</resources>
