<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/active_calculator_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPanel"
    tools:context=".view.active.ActiveCalculatorPanelFragment">


    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_number_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_8"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_evaluate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_9"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_number_0"
        app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

    <Button style="@style/PanelButton.Operator"
        android:id="@+id/btn_operator_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_operator_divide"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_evaluate"
        app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_number_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_number_7"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_5"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_evaluate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_6"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_number_0"
        app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

    <Button style="@style/PanelButton.Operator"
        android:id="@+id/btn_operator_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_operator_multiply"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_evaluate"
        app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_special_reset"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_number_4"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_evaluate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_3"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_number_0"
        app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

    <Button style="@style/PanelButton.Operator"
        android:id="@+id/btn_operator_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_operator_minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_evaluate"
        app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

    <Button style="@style/PanelButton.Special"
        android:id="@+id/btn_special_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_special_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_number_1"/>

    <Button style="@style/PanelButton.Number"
        android:id="@+id/btn_number_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_number_0"
        app:layout_constraintBottom_toBottomOf="@+id/btn_special_reset"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_special_evaluate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_special_reset"/>

    <Button style="@style/PanelButton.Special"
        android:id="@+id/btn_special_evaluate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_special_evaluate"
        app:layout_constraintBottom_toBottomOf="@+id/btn_special_reset"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_number_0"
        app:layout_constraintTop_toTopOf="@+id/btn_special_reset"/>

    <Button style="@style/PanelButton.Operator"
        android:id="@+id/btn_operator_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_operator_plus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_special_reset"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_special_evaluate"
        app:layout_constraintTop_toTopOf="@+id/btn_special_reset"/>


</androidx.constraintlayout.widget.ConstraintLayout>
