<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="io.pjhjohn.calculator.model.PanelInput"/>
        <variable name="vm" type="io.pjhjohn.calculator.passive.PassiveCalculatorViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/passive_calculator_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgPanel"
        tools:context=".passive.PassiveCalculatorActivity">

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number7) }"
            android:text="@string/btn_number_7"
            app:layout_constraintBottom_toTopOf="@+id/btn_number_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number8) }"
            android:text="@string/btn_number_8"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_command_evaluate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_reset"
            app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number9) }"
            android:text="@string/btn_number_9"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_number_0"
            app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

        <Button style="@style/PanelButton.Operator"
            android:id="@+id/btn_operator_divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.OperatorDivide) }"
            android:text="@string/btn_operator_divide"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_7"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_evaluate"
            app:layout_constraintTop_toTopOf="@+id/btn_number_7"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number4) }"
            android:text="@string/btn_number_4"
            app:layout_constraintBottom_toTopOf="@+id/btn_number_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_7"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number5) }"
            android:text="@string/btn_number_5"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_command_evaluate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_reset"
            app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number6) }"
            android:text="@string/btn_number_6"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_number_0"
            app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

        <Button style="@style/PanelButton.Operator"
            android:id="@+id/btn_operator_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.OperatorMultiply) }"
            android:text="@string/btn_operator_multiply"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_evaluate"
            app:layout_constraintTop_toTopOf="@+id/btn_number_4"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number1) }"
            android:text="@string/btn_number_1"
            app:layout_constraintBottom_toTopOf="@+id/btn_command_reset"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_4"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number2) }"
            android:text="@string/btn_number_2"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_command_evaluate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_reset"
            app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number3) }"
            android:text="@string/btn_number_3"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_number_0"
            app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

        <Button style="@style/PanelButton.Operator"
            android:id="@+id/btn_operator_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.OperatorMinus) }"
            android:text="@string/btn_operator_minus"
            app:layout_constraintBottom_toBottomOf="@+id/btn_number_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_evaluate"
            app:layout_constraintTop_toTopOf="@+id/btn_number_1"/>

        <Button style="@style/PanelButton.Command"
            android:id="@+id/btn_command_reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.CommandReset) }"
            android:text="@string/btn_command_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_1"/>

        <Button style="@style/PanelButton.Number"
            android:id="@+id/btn_number_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.Number0) }"
            android:text="@string/btn_number_0"
            app:layout_constraintBottom_toBottomOf="@+id/btn_command_reset"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_command_evaluate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_reset"
            app:layout_constraintTop_toTopOf="@+id/btn_command_reset"/>

        <Button style="@style/PanelButton.Command"
            android:id="@+id/btn_command_evaluate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.CommandEvaluate) }"
            android:text="@string/btn_command_evaluate"
            app:layout_constraintBottom_toBottomOf="@+id/btn_command_reset"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_operator_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_number_0"
            app:layout_constraintTop_toTopOf="@+id/btn_command_reset"/>

        <Button style="@style/PanelButton.Operator"
            android:id="@+id/btn_operator_plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{ () -> vm.input(PanelInput.OperatorPlus) }"
            android:text="@string/btn_operator_plus"
            app:layout_constraintBottom_toBottomOf="@+id/btn_command_reset"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_command_evaluate"
            app:layout_constraintTop_toTopOf="@+id/btn_command_reset"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
